more contrast corrections

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -53,7 +53,7 @@ p {
 
 .navigation a:hover {
     background-color: #f3f3f3;
-    color: navy;
+    color: #000080;
     border: 2px solid #4950cc;
     margin: 0;
     font-weight: 700;
@@ -67,7 +67,7 @@ button {
     font-size: 1.5rem;
 	border: 0;
 	background: none;
-    color: #000;
+    color: #000080;
     position: absolute;
     right: 1rem;
     top: 0.5rem;
